--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -254,6 +254,7 @@
     font-weight: 700;
     border: none;
     cursor: pointer;
+    outline: none;
     @include transition;
     
     &:hover {
