--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,55 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0; }
 
+.checkbox {
+  margin-bottom: 20px; }
+  .checkbox input {
+    display: none; }
+    .checkbox input:checked + label span {
+      background-color: #00b3b7;
+      border-color: #00b3b7; }
+      .checkbox input:checked + label span i {
+        opacity: 1;
+        visibility: visible; }
+  .checkbox label {
+    margin: 0;
+    cursor: pointer;
+    user-select: none; }
+    .checkbox label span {
+      display: block;
+      width: 18px;
+      height: 18px;
+      border-radius: 3px;
+      border: 2px solid #203140;
+      margin-right: 15px;
+      margin-top: 1px;
+      position: relative;
+      transition: all .2s linear; }
+      .checkbox label span i {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        visibility: hidden;
+        color: #fff;
+        font-size: 17px;
+        line-height: 19px;
+        transition: all .2s linear; }
+    .checkbox label em {
+      display: block;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: 300;
+      color: #203140;
+      flex: 1; }
+      .checkbox label em a {
+        color: #00b3b7;
+        text-decoration: underline; }
+        .checkbox label em a:hover {
+          text-decoration: none; }
+
 @-moz-document url-prefix() {
   .videoWrapper {
     padding: 0;
@@ -276,9 +325,12 @@ input[type=number]::-webkit-outer-spin-button {
     display: none;
     width: 35px;
     height: 35px;
-    margin-left: 10px;
+    margin-left: 15px;
     cursor: pointer;
     position: relative; }
+    @media (max-width: 320px) {
+      .header-buttons .mobile-menu-button {
+        margin-left: 10px; } }
     .header-buttons .mobile-menu-button.active span.line1 {
       top: 18px;
       transform: rotate(45deg); }
@@ -323,6 +375,12 @@ input[type=number]::-webkit-outer-spin-button {
       padding: 11px 22px;
       margin-left: 15px; }
       @media (max-width: 991px) {
+        .header-buttons a.button-login {
+          margin-left: 5px; } }
+      @media (max-width: 576px) {
+        .header-buttons a.button-login {
+          margin-left: 15px; } }
+      @media (max-width: 320px) {
         .header-buttons a.button-login {
           margin-left: 5px; } }
       .header-buttons a.button-login:hover {
@@ -1617,8 +1675,151 @@ input[type=number]::-webkit-outer-spin-button {
     font-weight: 700;
     border: none;
     cursor: pointer;
+    outline: none;
     transition: all .2s linear; }
     .input-submit input:hover {
       background-color: #203140; }
+
+.login-main {
+  background: #f5f5f5 url("../images/login-bg.png") no-repeat 50% 50%;
+  background-size: cover;
+  position: relative;
+  padding: 0 15px; }
+  .login-main:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 55px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.001)); }
+
+.login-wrapper {
+  max-width: 410px;
+  margin: 100px auto 100px auto;
+  border: 2px solid #00b3b7;
+  border-radius: 6px;
+  background-color: #f5f5f5;
+  padding: 45px;
+  position: relative; }
+  @media (max-width: 576px) {
+    .login-wrapper {
+      padding: 25px; } }
+  .login-wrapper .login-title {
+    position: absolute;
+    top: -15px;
+    left: 35px;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 900;
+    color: #00b3b7;
+    text-transform: uppercase;
+    background-color: #f5f5f5;
+    padding: 0 10px; }
+    @media (max-width: 576px) {
+      .login-wrapper .login-title {
+        left: 15px; } }
+  .login-wrapper .login-form-row {
+    margin-bottom: 20px; }
+    .login-wrapper .login-form-row label {
+      display: block;
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: 300;
+      color: #203140; }
+    .login-wrapper .login-form-row input {
+      display: block;
+      width: 100%;
+      height: 50px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      outline: none;
+      padding: 10px;
+      font-size: 18px;
+      line-height: 20px;
+      color: #203140; }
+      .login-wrapper .login-form-row input.border-main-color {
+        border: 1px solid #00b3b7; }
+      .login-wrapper .login-form-row input.border-error {
+        border: 1px solid #d45155; }
+  @media (max-width: 576px) {
+    .login-wrapper .login-form-buttons {
+      display: block !important;
+      text-align: center; } }
+  .login-wrapper .login-form-buttons a {
+    display: block;
+    text-decoration: underline;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 300;
+    color: #00b3b7; }
+    @media (max-width: 576px) {
+      .login-wrapper .login-form-buttons a {
+        margin-bottom: 20px; } }
+    .login-wrapper .login-form-buttons a:hover {
+      text-decoration: none; }
+  .login-wrapper .login-form-buttons input {
+    display: block;
+    min-width: 90px;
+    height: 30px;
+    border-radius: 30px;
+    background-color: #00b3b7;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 15px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    transition: all .2s linear; }
+    @media (max-width: 576px) {
+      .login-wrapper .login-form-buttons input {
+        margin: 0 auto; } }
+    .login-wrapper .login-form-buttons input:hover {
+      background-color: #203140; }
+
+.signup-wrapper {
+  max-width: 730px;
+  margin: 100px auto 100px auto; }
+  .signup-wrapper .login-wrapper {
+    margin: 0;
+    width: 100%;
+    max-width: inherit; }
+  .signup-wrapper .checkbox {
+    margin-bottom: 40px; }
+  .signup-wrapper p {
+    font-size: 11px;
+    line-height: 18px;
+    color: #203140;
+    margin: 0;
+    text-align: justify;
+    padding: 40px 45px; }
+    @media (max-width: 576px) {
+      .signup-wrapper p {
+        padding: 20px 0; } }
+
+.hint-alerts {
+  position: absolute;
+  top: -80px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 360px;
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px; }
+  @media (max-width: 576px) {
+    .hint-alerts {
+      width: 100%; } }
+  .hint-alerts.error {
+    background-color: #d45155; }
+  .hint-alerts mark {
+    display: block;
+    background: none;
+    padding: 0;
+    color: #fff;
+    font-size: 18px;
+    line-height: 24px; }
 
 /*# sourceMappingURL=style.css.map */
