--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -247,6 +247,75 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.checkbox {
+  margin-bottom: 20px;
+
+  input {
+    display: none;
+
+    &:checked {
+      + label {
+        span {
+          background-color: $main-color;
+          border-color: $main-color;
+
+          i {
+            opacity: 1;
+            visibility: visible;
+          }
+        }
+      }
+    }
+  }
+
+  label {
+    margin: 0;
+    cursor: pointer;
+    user-select: none;
+
+    span {
+      display: block;
+      width: 18px;
+      height: 18px;
+      border-radius: 3px;
+      border: 2px solid $dark-color;
+      margin-right: 15px;
+      margin-top: 1px;
+      position: relative;
+      @include transition;
+
+      i {
+        @include center;
+        opacity: 0;
+        visibility: hidden;
+        color: #fff;
+        font-size: 17px;
+        line-height: 19px;
+        @include transition;
+      }
+    }
+
+    em {
+      display: block;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: 300;
+      color: $dark-color;
+      flex: 1;
+
+      a {
+        color: $main-color;
+        text-decoration: underline;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
+
 @-moz-document url-prefix() {
   .videoWrapper {
     padding: 0;
