--- a/css/style.css
+++ b/css/style.css
@@ -383,10 +383,10 @@ input[type=number]::-webkit-outer-spin-button {
       @media (max-width: 320px) {
         .header-buttons a.button-login {
           margin-left: 5px; } }
-      .header-buttons a.button-login:hover {
+      .header-buttons a.button-login:hover, .header-buttons a.button-login.active {
         background-color: #00b3b7;
         border-color: #00b3b7; }
-    .header-buttons a.button-sign-up:hover {
+    .header-buttons a.button-sign-up:hover, .header-buttons a.button-sign-up.active {
       color: #00b3b7; }
 
 .main-footer {
@@ -1684,7 +1684,7 @@ input[type=number]::-webkit-outer-spin-button {
   background: #f5f5f5 url("../images/login-bg.png") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
-  padding: 0 15px; }
+  padding: 1px 15px; }
   .login-main:before {
     content: '';
     display: block;
