--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -2,7 +2,7 @@
   background: #f5f5f5 url("../images/login-bg.png") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
-  padding: 0 15px;
+  padding: 1px 15px;
 
   &:before {
     content: '';
