--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -159,17 +159,26 @@
 }
 
 .hint-alerts {
-  position: absolute;
-  top: -80px;
+  position: fixed;
+  top: 110px;
   left: 50%;
   transform: translateX(-50%);
   width: 360px;
   padding: 15px;
   text-align: center;
   border-radius: 5px;
+  z-index: 100;
+
+  @media (max-width: $screen-lg-min) {
+    top: 95px;
+  }
 
   @media (max-width: $screen-sm-min) {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+
+  @media (max-width: $screen-md-min) {
+    top: 80px;
   }
   
   &.error {
